package ru.autotestgen.model;

/**
 * Логическая категория сущности XML-модели.
 * Определяется по структуре XML, а не по имени.
 *
 * PRIMARY — главная бизнес-сущность с собственной точкой входа в меню,
 *   собственным параметрическим поиском и CRUD-операциями.
 * CHILD — дочерняя сущность, существующая только как tab/grid у другого entity
 *   (например «История ГСК/ОГСК» внутри карточки ГСК/ОГСК).
 * REFERENCE_DICTIONARY — справочник-перечисление, выбираемый через FK-пикер.
 *   У такого Search либо пустой список параметров, либо result содержит только SearchKey/SearchName.
 */
public enum EntityKind {
    PRIMARY,
    CHILD,
    REFERENCE_DICTIONARY
}
