package ru.autotestgen.model;

public class Modifier {
    private String title;
    private ModifyType modifyType;

    public String getTitle() { return title; }
    public void setTitle(String title) { this.title = title; }

    public ModifyType getModifyType() { return modifyType; }
    public void setModifyType(ModifyType modifyType) { this.modifyType = modifyType; }
}
