package ru.autotestgen.model;

public class OperationParam {
    private String name;
    private String paramType;
    private String valueType;

    public String getName() { return name; }
    public void setName(String name) { this.name = name; }

    public String getParamType() { return paramType; }
    public void setParamType(String paramType) { this.paramType = paramType; }

    public String getValueType() { return valueType; }
    public void setValueType(String valueType) { this.valueType = valueType; }
}
